--- a/HandOnLab/.vscode/settings.json
+++ b/HandOnLab/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "azureFunctions.deploySubpath": "intermediate\\InventoryManagement\\src\\BackEnd/bin/Release/net6.0/publish",
+    "azureFunctions.deploySubpath": "intermediate\\ProductReview\\src/bin/Release/net6.0/publish",
     "azureFunctions.projectLanguage": "C#",
     "azureFunctions.projectRuntime": "~4",
     "debug.internalConsoleOptions": "neverOpen",
